crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@expressions__compound_expr.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for expressions/compound_expr.cm
input_file: test_data/expressions/compound_expr.cm
---
Fixture: expressions/compound_expr.cm
============================================================
Source code:
//!ASSERT CONTAINS: Add
//!ASSERT CONTAINS: Sub
//!ASSERT CONTAINS: Mul

// Tests a more complex expression involving parentheses and multiple variables.
fn test_complex(x: felt, y: felt) -> felt {
    let temp = x + y;
    let result = temp * (x - y);
    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_complex {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      %3 = %0 Sub %1
      %4 = %2 Mul %3
      return %4

  }

}
