crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@expressions__tuple_indexing.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for expressions/tuple_indexing.cm
input_file: test_data/expressions/tuple_indexing.cm
---
Fixture: expressions/tuple_indexing.cm
============================================================
Source code:
// Tests tuple indexing syntax (expr.N)
fn test_basic_tuple_index() -> felt {
    let tt = (10, 20, 30);
    return tt.1;
}

// TODO: Add u32 test on accessing tuple index.
// fn test_u32_tuple_index() -> u32 {
//     let tt = (10u32, 20u32, 30u32);
//     return tt.1;
// }

fn test_tuple_index_lvalue() -> felt {
    let tt = (100, 200, 300);
    tt.1 = 250;
    return tt.1;
}

fn test_nested_tuple_index() -> felt {
    let nested = ((1, 2), (3, 4));
    return nested.0.1 + nested.1.0;
}

fn get_tuple() -> (felt, felt) {
    return (42, 99);
}

fn test_function_return_tuple_index() -> felt {
    return get_tuple().1;
}

fn test_simple_function_call_index() -> felt {
    let result = get_tuple().1;
    return result;
}

fn test_chain_tuple_operations() -> felt {
    let tt = (1, 2, 3);
    let x = tt.0;
    tt.2 = x + tt.1;
    return tt.2;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_basic_tuple_index {
    entry: 0

    0:
      return 20

  }

  // Function 1
  fn test_tuple_index_lvalue {
    entry: 0

    0:
      return 250

  }

  // Function 2
  fn test_nested_tuple_index {
    entry: 0

    0:
      // Allocate tuple with 2 elements
%1 = stackalloc 2
      // Get address of tuple element 0
%2 = getelementptr %1, 0
      store %2, 1
      // Get address of tuple element 1
%3 = getelementptr %1, 1
      store %3, 2
      // Allocate tuple with 2 elements
%5 = stackalloc 2
      // Get address of tuple element 0
%6 = getelementptr %5, 0
      store %6, 3
      // Get address of tuple element 1
%7 = getelementptr %5, 1
      store %7, 4
      // Load tuple element 0
%14 = load %13
      %15 = %5 Add %14
      return %15

  }

  // Function 3
  fn get_tuple {
    entry: 0

    0:
      return (42, 99)

  }

  // Function 4
  fn test_function_return_tuple_index {
    entry: 0

    0:
      %0, %1 = call 3()
      return %1

  }

  // Function 5
  fn test_simple_function_call_index {
    entry: 0

    0:
      %0, %1 = call 3()
      return %1

  }

  // Function 6
  fn test_chain_tuple_operations {
    entry: 0

    0:
      %8 = 1 Add 2
      return %8

  }

}
